新增公众号文章搜索功能

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
         <div class="articles-header">
           <h2 id="current-account-name">请选择公众号</h2>
           <div class="actions">
+            <input type="text" id="search-articles-input" placeholder="搜索文章标题..." style="margin-right: 10px; padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
             <span id="progress-info">未开始获取</span>
             <div class="sort-controls">
               <label for="sort-order">排序方式：</label>
