--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,12 @@
       </div>
     </div>
   </div>
-  
-  <script src="renderer.js"></script>
+
+
+  <script src="script/state.js"></script>
+  <script src="script/domElements.js"></script>
+  <script src="script/uiUtils.js"></script> 
+  <script src="renderer.js"></script> 
+
 </body>
 </html> 
