--- a/src/index.html
+++ b/src/index.html
@@ -189,6 +189,7 @@
   <script src="script/state.js"></script>
   <script src="script/domElements.js"></script>
   <script src="script/uiUtils.js"></script> 
+  <script src="script/accountManager.js"></script> 
   <script src="renderer.js"></script> 
 
 </body>
