拆分renderer.js逻辑-文章管理相关功能

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,9 @@
   <script src="script/domElements.js"></script>
   <script src="script/uiUtils.js"></script> 
   <script src="script/accountManager.js"></script> 
+  <script src="script/articleManager.js"></script>
   <script src="renderer.js"></script> 
+
 
 </body>
 </html> 
