拆分renderer.js-阶段五，账号管理功能模块

--- a/src/index.html
+++ b/src/index.html
@@ -191,8 +191,8 @@
   <script src="script/uiUtils.js"></script> 
   <script src="script/accountManager.js"></script> 
   <script src="script/articleManager.js"></script>
+  <script src="script/settingsManager.js"></script>
   <script src="renderer.js"></script> 
-
 
 </body>
 </html> 
