拆分renderer.js-最后部分

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,8 @@
   <script src="script/accountManager.js"></script> 
   <script src="script/articleManager.js"></script>
   <script src="script/settingsManager.js"></script>
-  <script src="renderer.js"></script> 
+  <script src="script/appInit.js"></script> 
+  <!-- <script src="renderer.js"></script>  -->
 
 </body>
 </html> 
